--- a/index.html
+++ b/index.html
@@ -29,41 +29,53 @@ nav{
     display:flex;
     justify-content:space-between;
     align-items:center;
-    padding:15px 50px;
+    padding:12px 20px;
     z-index:1000;
 }
 
 nav h2{
     color:#00eaff;
+    font-size:1.4rem;
 }
 
+/* NAV LINKS */
 nav ul{
     list-style:none;
     display:flex;
-    gap:30px;
+    gap:25px;
 }
 
 nav ul li{
     cursor:pointer;
+    font-size:0.95rem;
 }
 
 nav ul li:hover{
     color:#00eaff;
 }
 
-/* MAIN */
+/* HAMBURGER */
+.menu-toggle{
+    display:none;
+    font-size:1.8rem;
+    cursor:pointer;
+    color:#00eaff;
+}
+
+/* MAIN CONTAINER */
 .container{
-    height:100vh;
+    min-height:100vh;
     display:flex;
     justify-content:center;
     align-items:center;
     text-align:center;
-    padding:20px;
+    padding:100px 20px 60px;
 }
 
 .section{
     display:none;
-    animation:fadeIn 0.8s ease;
+    animation:fadeIn 0.6s ease;
+    width:100%;
 }
 
 .section.active{
@@ -71,43 +83,44 @@ nav ul li:hover{
 }
 
 @keyframes fadeIn{
-    from{opacity:0; transform:translateY(30px);}
+    from{opacity:0; transform:translateY(20px);}
     to{opacity:1; transform:translateY(0);}
 }
 
 /* HEADINGS */
 .section h1{
     color:#00eaff;
-    font-size:3rem;
-    margin-bottom:15px;
+    font-size:2.3rem;
+    margin-bottom:12px;
 }
 
 /* HOME */
 .home p{
-    max-width:650px;
-    margin:0 auto 30px;
-    font-size:1.2rem;
+    max-width:600px;
+    margin:0 auto 25px;
+    font-size:1.05rem;
     color:#e0e0e0;
 }
 
 .home button{
-    padding:12px 35px;
+    padding:12px 32px;
     border:none;
     border-radius:30px;
     background:#00eaff;
     cursor:pointer;
+    font-weight:600;
 }
 
 .home button:hover{
-    box-shadow:0 0 25px #00eaff;
+    box-shadow:0 0 20px #00eaff;
 }
 
 /* CARD */
 .card{
     background:rgba(255,255,255,0.08);
     backdrop-filter:blur(15px);
-    padding:35px;
-    border-radius:22px;
+    padding:28px;
+    border-radius:20px;
     max-width:720px;
     margin:auto;
 }
@@ -115,17 +128,18 @@ nav ul li:hover{
 /* SERVICES */
 .services-container{
     display:flex;
-    gap:25px;
+    gap:18px;
     justify-content:center;
     flex-wrap:wrap;
-    margin-top:30px;
+    margin-top:25px;
 }
 
 .service-box{
-    width:200px;
-    padding:25px;
-    border-radius:18px;
+    width:180px;
+    padding:20px;
+    border-radius:16px;
     background:rgba(255,255,255,0.12);
+    font-size:0.95rem;
 }
 
 .service-box:hover{
@@ -133,38 +147,81 @@ nav ul li:hover{
 }
 
 /* CONTACT */
-.contact input,.contact textarea{
+.contact input,
+.contact textarea{
     width:100%;
     padding:12px;
     margin:10px 0;
     border:none;
-    border-radius:12px;
+    border-radius:10px;
+    font-size:0.95rem;
 }
 
 .contact button{
     margin-top:10px;
-    padding:12px 30px;
+    padding:12px 28px;
     border:none;
     border-radius:25px;
     background:#00eaff;
     cursor:pointer;
+    font-weight:600;
 }
 
 .error{
     color:#ff6b6b;
     margin-top:10px;
-    font-size:0.95rem;
+    font-size:0.9rem;
 }
 
 /* FOOTER */
 footer{
-    position:fixed;
-    bottom:0;
     width:100%;
     text-align:center;
     padding:12px;
     background:rgba(0,0,0,0.4);
-    font-size:0.9rem;
+    font-size:0.85rem;
+}
+
+/* MOBILE VIEW */
+@media (max-width: 768px){
+
+    .menu-toggle{
+        display:block;
+    }
+
+    nav ul{
+        position:absolute;
+        top:60px;
+        left:0;
+        width:100%;
+        background:rgba(0,0,0,0.95);
+        flex-direction:column;
+        align-items:center;
+        display:none;
+        padding:20px 0;
+    }
+
+    nav ul.active{
+        display:flex;
+    }
+
+    nav ul li{
+        padding:15px 0;
+        font-size:1.05rem;
+    }
+
+    .section h1{
+        font-size:1.9rem;
+    }
+
+    .home p{
+        font-size:1rem;
+    }
+
+    .service-box{
+        width:100%;
+        max-width:260px;
+    }
 }
 </style>
 </head>
@@ -173,7 +230,10 @@ footer{
 
 <nav>
     <h2>SkillCraft</h2>
-    <ul>
+
+    <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+
+    <ul id="nav-links">
         <li onclick="showSection('home')">Home</li>
         <li onclick="showSection('about')">About</li>
         <li onclick="showSection('services')">Services</li>
@@ -236,6 +296,13 @@ function showSection(id){
         sec.classList.remove('active');
     });
     document.getElementById(id).classList.add('active');
+
+    // close mobile menu after click
+    document.getElementById("nav-links").classList.remove("active");
+}
+
+function toggleMenu(){
+    document.getElementById("nav-links").classList.toggle("active");
 }
 
 function validateForm(){
@@ -246,14 +313,17 @@ function validateForm(){
 
     if(!name){
         error.textContent="Please enter your name";
+        error.style.color="#ff6b6b";
         return;
     }
     if(!email){
         error.textContent="Please enter your email";
+        error.style.color="#ff6b6b";
         return;
     }
     if(!message){
         error.textContent="Please enter your message";
+        error.style.color="#ff6b6b";
         return;
     }
 
